header var3, para var4

--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -6,10 +6,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Questrial&display=swap');
+
+
 // Define fonts for body and headers
 
 $headers-font: 'Antic Slab', serif;
-$body-font: 'Josefin Sans', sans-serif;
+$body-font: 'Questrial', sans-serif;
 
 // To use a font file (.woff) uncomment following lines
 // @font-face {
