--- a/app/assets/stylesheets/pages/_request_index.scss
+++ b/app/assets/stylesheets/pages/_request_index.scss
@@ -1,3 +1,15 @@
+.cards {
+  .card-event-image{
+    width: 190px;
+  }
+}
+
+
+
+
+
+
+
 .card-request {
   overflow: hidden;
   width: 75%;
@@ -36,9 +48,10 @@
   margin-top: 8px;
 }
 
-.card-request .card-request-infos {
+.card-request-infos {
   padding: 16px;
   margin: 0px 0px 0px 16px;
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 .section_title {
