--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -2,22 +2,23 @@
   <h3>Here you will find <strong>ALL</strong> your requests !</h3>
   <h3>Your requests as <strong>HOST</strong></h3>
 
-  
-  <% @host_events_requests.each do |requests| %>
-    <div class="cards">
-      <div class="card-request-host">
 
-        <%# <img src="https://source.unsplash.com/random/512x512" /> %>
-        <div class="card-request-infos">
+  <% @host_events_requests.each do |requests| %>
           <% unless requests.empty?%>
+    <div class="cards">
+
+      <div class="card-request-host">
+        <img class="card-event-image" src="https://source.unsplash.com/random/512x512" />
+        <div class="card-request-infos">
             <%= requests.first.event.title %>
             <% requests.each do |request|  %>
 
 
               <div class="cards">
                 <div class="card-request">
-                  <%# <img src="https://source.unsplash.com/random/512x512" /> %>
+
                   <div class="card-request-infos">
+
                     <p>Request no.: <%= request.id %></p>
                     <p> <%= request.user.user_name  %> wants to join you! </p>
                     <p>
@@ -33,7 +34,9 @@
                       <%= simple_form_for(request, url: validate_request_path(request), html: { method: :patch }) do |f| %>
                         <%= f.button :submit, value: "declined", class: "btn btn-block btn-primary lift" %>
                       <% end %>
+
                     </div>
+
                   </div>
                 </div>
               </div>
@@ -45,6 +48,13 @@
       </div>
     </div>
   <% end %>
+
+
+
+
+  <%# ===================================== %>
+  <%# ===================================== %>
+  <%# ===================================== %>
   <h3>Your requests as <strong>GUEST</strong></h3>
   <p>Check soon to see who are you meeting with !</p>
   <% @guest_event_requests.each do |request| %>
