--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -7,7 +7,7 @@
       object-fit: cover;
       height: 480px;
       border-radius: 0px 0px 320px 0px;
-      box-shadow: 0px 0px 10px rgba(145, 145, 145, 0.808)
+      box-shadow: 0px 0px 10px rgba(145, 145, 145, 0.808);
     }
   }
   .show-header {
@@ -81,7 +81,8 @@
   background-color: white;
   padding-bottom: 40px;
   .comment-content {
-    padding: 8px;
+    margin: -10px 30px 15px 30px;
+    padding: 16px;
     border: 1px solid $primary-color;
   }
 }
@@ -117,20 +118,24 @@
     margin: auto;
   }
   
-  .comment-img-user img{
+  .comment-img-user{
     border-radius: 50%;
     width: 72px;
     height: 72px;
   }
 
   .comments-card-text {
-    margin: 15px 30px 15px 30px;
-    background-color: rgba(211, 211, 211, 0.377);
+    margin: 0px 30px 0px 30px;
+    background-color: #F2F4F8;
     border-radius: 32px;
-    padding: 16px;
+    padding: 16px 16px 0px 16px;
+    p {
+      margin-bottom: 0px;
+    }
   }
   
   .comment-date {
-    padding-top: 40px;
-    font-size: 12px;
+    padding-top: -20px;
+    padding-bottom: 16px;
+    font-size: 14px;
   }
