--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -46,9 +46,6 @@
           <% end %>
         <% end %>
       <% end %>
-      <div class="">
-        <p class="desc-show"><%= @event.description %></p>
-      </div>
     </div>
   </div>
 
@@ -93,7 +90,7 @@
 <section class="comments-section">
   <p class="comment-event-header">Questions about the event?</p>
   <% @event.comments.each do |comment| %>
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mb-4">
       <div class="col-1">
         <div class="comment-user-img">
           <% if comment.user.image.attached? %>
@@ -103,13 +100,11 @@
           <% end %>
         </div>
       </div>
-      <div class="col-8">
+      <div class="col-8 comments-padding">
         <div class="comments-card-text">
           <p><b><%= comment.user.first_name %>: </b><%= comment.content %></p>
+          <p class="text-muted comment-date"><small><%= comment.created_at.strftime("%A, %b %d") %></small></p>
         </div>
-      </div>
-      <div class="col-2 comment-date">
-        <p><%= comment.created_at.strftime("%A, %b %d") %></p>
       </div>
     </div>
   <% end %>
@@ -118,8 +113,8 @@
 <section class="comments-form-section">
   <%= simple_form_for [@event, @comment] do |f| %>
     <div class="row justify-content-center">
-      <div class="col-6">
-        <%= f.text_area :content, size: "100x4", class:"comment-content", id:"comment-event" %>
+      <div class="col-4">
+        <%= f.text_area :content, size: "60x2", class:"comment-content", id:"comment-event" %>
       </div>
       <div class="col-2">
         <%= f.submit class: 'btn-standard', id:"comment-btn" %>
