--- a/app/assets/stylesheets/pages/_profile_show.scss
+++ b/app/assets/stylesheets/pages/_profile_show.scss
@@ -246,6 +246,8 @@ justify-content: center;
 
 .cancel-edit-event{
   text-align: center;
+  font-size:22px;
+  padding: 25px 0;
 }
 
 .cancel-event{
