--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -1,7 +1,8 @@
 // Import your components CSS files here.
 @import "alert";
 @import "avatar";
-@import "navbar";
-@import "footer";
 @import "body";
 @import "button";
+@import "footer";
+@import "map";
+@import "navbar";
