--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,230 +1,10 @@
 // Import page-specific CSS files here.
+
+@import "edit";
 @import "home";
+@import "new";
+@import "new_request";
+@import "profile_show";
 @import "request_index";
-
-
-// SEARCH SECTION
-.search-section {
-    background-image: url("https://images.unsplash.com/photo-1519671482749-fd09be7ccebf?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=750&q=80");
-  background-size:cover;
-  height: 480px;
-}
-
-.searchbar-index-page {
-    form {
-      text-align: center;
-    }
-    .algolia-places {
-      width: 400px;
-      form {
-        text-align: left !important;
-      }
-      input {
-        border-radius: 8px;
-        width: 400px;
-        height: 48px;
-        font-size: 16px;
-        text-align: left !important;
-      }
-    }
-  }
-
-  .search-header-text { 
-    text-align: center;
-    h1 {
-      margin-top: 160px;
-      padding-left: 0px;
-      font-size: 48px;
-      margin-bottom: -32px;
-      color: white;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    }
-    .subheader-index-page {
-      color: white;
-      font-size: 18px;
-      text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
-    }
-  }
-
-  .nav {
-    display: flex;
-    flex-wrap: wrap;
-    padding-left: 0;
-    margin-bottom: 0;
-    list-style: none;
-    margin-top: 16px;
-}
-
-.justify-content-center {
-    justify-content: center!important;
-}
-
-.badge-white-soft {
-    background-color: rgba(255,255,255,.1);
-    color: #fff;
-    &:hover {
-        color: $primary-color;
-    }
-}
-
-.badge-white-soft.active {
-    background-color: $primary-color;
-    color: white;
-}
-
-// SEARCH RESULTS SECTION
-
-body {
-    background-color: #FAFBFD;
-}
-.form-control-search-index {
-    width: 500px;
-    height: 58px;
-    border-radius: 1px;
-    border: 1px solid $primary-color;
-    text-align: center;
-    color: rgb(70, 70, 70);
-    font-size: 20px;
-    letter-spacing: 2px;
-    line-height: 8;
-}
-
-.submit-btn-search {
-    font-size: 16px;
-}
-
-#category_id {
-    width: 500px;
-    height: 58px;
-    border-radius: 1px;
-    border: 1px solid $primary-color;
-    color: rgb(124, 124, 124);
-    font-size: 20px;
-    text-align: center;
-    letter-spacing: 2px;
-}
-
-.header-index {
-    margin: 40px 0px 20px 80px;
-    font-size: 20px;
-    font-family: $header-font;
-}
-
-.map-style-index {
-    box-shadow: $standard-shadow;
-    height: 100vh;
-    position: sticky;
-}
-
-.card-body {
-    padding: 0px;
-}
-
-.card-index {
-    border: none;
-    border-radius: $standard-radius;
-    box-shadow: $standard-shadow;
-    margin-bottom: 24px;
-    text-align: center;
-    min-height: 400px;
-    transform: scale(1);
-    transition: $standard-transition;
-    &:hover {
-        transform: scale(1.04);
-    }
-
-    .title-index {
-        text-align: center;
-        font-size: 20px;
-        padding: 0px 8px;
-        min-height: 40px;
-        color: black;
-        text-decoration: none;
-    }
-
-    .card-img-index {
-        border-radius: $standard-radius $standard-radius 50px 0;
-        width: 100%;
-        height: 160px;
-        object-fit: cover;
-        margin-bottom: 16px;
-    }
-
-    .user-name-index {
-        font-size: 12px;
-        padding-top: 8px;
-        margin-left: -14px;
-        text-align: left !important;
-    }
-
-    .user-social-icons {
-        margin-top: 8px;
-        color: $primary-color;
-        i {
-            padding-right: 8px;
-        }
-    }
-
-    .date-index {
-        padding-top: 4px;
-    }
-
-    .location-index {
-        margin-top: -16px;
-    }
-
-    .index-tags {
-        text-align: center;
-        display: flex;
-        flex-wrap: wrap;
-        margin: 8px auto 24px auto;
-        width: 90%;
-        min-height: 72px;
-    }
-
-    .category-index {
-        text-align: center;
-        border: 1px solid $primary-color;
-        background-color: $primary-color;
-        max-width: 100px;
-        padding: 8px 12px;
-        border-radius: 16px;
-        color: white;
-        font-size: 14px;
-        margin-bottom: 8px;
-        height: 36px;
-        margin-right: 8px;
-    }
-
-    .profile-pic-index {
-        text-align: center;
-        img {
-            margin-left: 30px;
-            border-radius: 50%;
-            width: 32px;
-            height: 32px;
-            object-fit: cover;
-            box-shadow: $standard-shadow;
-        }
-        i {
-            float: right;
-        }
-    }
-}
-
-.card-footer-index {
-    max-height: 64px;
-
-}
-
-.index-no-result {
-    text-align: center;
-    svg {
-        margin: 32px auto;
-        width: 480px;
-        height: 100%;
-    }
-    p {
-        font-size: 24px;
-    }
-}
+@import "show";
+@import "signup";
