basic structure for each page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,8 +9,8 @@
     <p class="generated-text-landingpage">
       <span id="banner-typed-text"></span>
     </p>
-    <p class="subheader-landingpage">New in town? Join or host activities to get to know new people. 
-      <br> 
+    <p class="subheader-landingpage">New in town? Join or host activities to get to know new people.
+      <br>
       Match, meet & mingle!
     </p>
   </div>
@@ -163,10 +163,10 @@
   </section>
 
 
-<script>
+<!-- <script>
   var typed = new Typed('#typed', {
     stringsElement: '#typed-strings',
     typeSpeed: 100
   });
-</script>
+</script> -->
 
