changed the payout

--- a/app/views/requests/index.html.erb
+++ b/app/views/requests/index.html.erb
@@ -36,7 +36,7 @@
 
 <main class="pb-8 pb-md-11 mt-md-n6">
   <div class="container-md">
-    <div class="row">
+    <div class="row justify-content-between">
       <div class="col-12 col-md-5">
         <div class="lcard card-bleed border-bottom border-bottom-md-0 shadow-light-lg">
           <div class="collapse d-md-block">
