--- a/app/assets/stylesheets/pages/_new.scss
+++ b/app/assets/stylesheets/pages/_new.scss
@@ -5,12 +5,19 @@
 
 .create-form {
     text-align: center;
+    background-color: rgb(255, 255, 255);
+    margin: 0 auto;
+    margin-top: -80px;
+    width: 1300px;
+    height: 640px;
+    padding-top: 80px;
+    border-radius: 80px;
     .create-field-title {
-        margin: 16px auto;
         border: 1px solid $primary-color;
+        margin-bottom: 32px;
         padding: 8px 16px;
         box-shadow: $standard-shadow;
-        width: 560px;
+        width: 500px;
     }
     .create-field-desc {
         margin: 0 auto;
@@ -18,29 +25,26 @@
         border: 1px solid $primary-color;
         padding: 8px 16px;
         box-shadow: $standard-shadow;
-        width: 560px;
+        width: 500px;
     }
     .create-field-location {
         margin-left: auto;
         margin-right: auto;
-        margin-top: 20px;
         border: 1px solid $primary-color;
         padding: 8px 16px;
         box-shadow: $standard-shadow;
         border-radius: 1px;
     }
     .algolia-places {
-        width: 560px;
-        svg {
-            margin-top: 10px;
-        }
+        width: 500px;
+        margin-bottom: 32px;
       }
     .create-field-date {
-        margin: 16px auto;
+        margin-bottom: 32px;
         border: 1px solid $primary-color;
         padding: 8px 16px;
         box-shadow: $standard-shadow;
-        width: 560px;
+        width: 500px;
     }
     .create-field-submit {
         margin-bottom: 40px;
@@ -57,13 +61,17 @@ form label {
     display: inline-block !important;
 }
 
+.control-label {
+    margin-top: 32px;
+}
+
 .category-choices {
     text-align: center;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
     margin: 8px auto 24px auto;
-    width: 32%;
+    width: 65%;
     & input {
         display: none;
     }
