--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -1,32 +1,62 @@
  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flatpickr/4.2.3/flatpickr.css">
  <link rel="stylesheet" type="text/css" href="https://npmcdn.com/flatpickr/dist/themes/dark.css">
 
-<h1 class="header-create">Create... Meet... Have fun!</h1>
+<header class="header-banner pt-9 pb-11 d-none d-md-block header-banner-host-event" style="background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,1)), url(https://images.unsplash.com/photo-1520880867055-1e30d1cb001c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2550&q=80)">
+  <div class="container-md">
+    <div class="row align-items-center">
+      <div class="col">
+        <h1 class="font-weight-bold text-white mb-2">
+          Host your own event
+        </h1>
+        <p class="font-size-lg text-white-75 mb-0">
+          Create... Meet... Have fun!
+        </p>
+
+      </div>
+      <div class="col-auto">
+
+      </div>
+    </div> <!-- / .row -->
+  </div> <!-- / .container -->
+</header>
+<div class="position-relative">
+  <div class="shape shape-bottom shape-fluid-x svg-shim text-dark mb-4">
+    <svg viewBox="0 0 2880 48" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 48h2880V0h-720C1442.5 52 720 0 720 0H0v48z" fill="currentColor"></path></svg>
+  </div>
+</div>
 
 <div class="create-form">
     <%= simple_form_for @event do |f| %>
-        <%= f.text_field :title, 
-            placeholder: "Whats the name of your event?", 
-            class:"create-field-title" %>
-        <br>
-        <%= f.text_area :description, 
-            placeholder: "Say something about your event!", 
-            size: "60x12", 
-            class:"create-field-desc" %>
-        <br>
-        <%= f.text_field :location, 
-            id:"address-input", 
-            placeholder: "Where will your event take place?", 
-            type:"search", 
-            class:"create-field-location" %>
-        <br>
-        <%= f.text_field :event_date, 
-            id:"basicDate", 
-            placeholder:"When will your event take place?", 
-            class:"create-field-date" %>
-        <br>
+        <div class="row justify-content-center">
+            <div class="col-5">
+                <%= f.text_field :title, 
+                placeholder: "Whats the name of your event?", 
+                class:"create-field-title" %>
+
+                <%= f.text_field :location, 
+                id:"address-input", 
+                placeholder: "Where will your event take place?", 
+                type:"search", 
+                class:"create-field-location" %>
+
+                <%= f.text_field :event_date, 
+                id:"basicDate", 
+                placeholder:"When will your event take place?", 
+                class:"create-field-date" %>
+
+                <%= f.file_field :photo %>
+            </div>
+            <div class="col-5">
+                <%= f.text_area :description, 
+                placeholder: "Describe your event!", 
+                size: "60x10", 
+                class:"create-field-desc" %>
+            <br>
+            </div>
+        </div>
+        
         <div class="form-group">
-            <label class="control-label check_boxes optional">Choose at least one Category for your event</label>
+            <label class="control-label check_boxes optional">Choose at least <b>one</b> Category for your event</label>
             <input type="hidden" name="event[category_ids][]" value="">
             <div class="category-choices">
                 <% Category.all.each do |category| %>
@@ -40,7 +70,6 @@
                 <% end %>
             </div>
         </div>
-        <%= f.file_field :photo %>
         <%= f.submit "Create event", 
             class:"create-field-submit btn-standard" %>
     <% end %>
