--- a/app/assets/stylesheets/components/_header.scss
+++ b/app/assets/stylesheets/components/_header.scss
@@ -38,6 +38,8 @@
   border-radius: .375rem;
   position: relative;
   width: 100%;
+  margin-bottom: 2rem;
+  padding: 1rem;
 }
 
 
@@ -58,14 +60,23 @@
 }
 
 .shadow-light-lg {
-    box-shadow: 0 1.5rem 4rem rgba(22,28,45,.05)!important;
+  box-shadow: 0 1.5rem 4rem rgba(22,28,45,.05)!important;
 }
 
 .lcard-body {
-    display: block;
-    -webkit-box-flex: 0;
-    flex-grow: 0;
-    padding: 1rem !important;
+  display: block;
+  -webkit-box-flex: 0;
+  flex-grow: 0;
+  padding: 1rem !important;
+}
+
+.request-bottom{
+  justify-content: space-between;
+  display: flex;
+  flex-wrap: wrap;
+  -webkit-box-align: center;
+  align-items: center;
+  padding: 0 2rem 1.5rem;
 }
 
 @media (min-width: 768px) {
